--- a/ios-webkit-debug-proxy/ios-webkit-debug-proxy.vcxproj
+++ b/ios-webkit-debug-proxy/ios-webkit-debug-proxy.vcxproj
@@ -61,17 +61,20 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)\$(Configuration);$(SolutionDir)\vendors\libgcc\lib;$(SolutionDir)\vendors\zlib\lib;$(SolutionDir)\vendors\openssl\lib;$(SolutionDir)\vendors\libxml2\lib;$(SolutionDir)\vendors\iconv\lib;$(SolutionDir)\vendors\pcre\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>libimobiledevice.lib;libplist.lib;libusbmuxd.lib;libgcc.a;ws2_32.lib;zlib.lib;libcompat.lib;getopt.lib;libcnary.lib;iconv.lib;libxml2.lib;pcre.lib;socket.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libimobiledevice.lib;libplist.lib;libusbmuxd.lib;ws2_32.lib;zlib.lib;libcompat.lib;getopt.lib;libcnary.lib;iconv.lib;libxml2.lib;pcre.lib;socket.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y "$(SolutionDir)vendors\libxml2\bin\*.dll" "$(OutDir)"
 
 
-xcopy /y "$(SolutionDir)vendors\iconv\bin\*.dll" "$(OutDir)"
+
+xcopy /y "$(SolutionDir)vendors\iconv\bin\*.dll" "$(OutDir)" 
 
 xcopy /y "$(SolutionDir)vendors\zlib\bin\*.dll" "$(OutDir)"
 
-xcopy /y "$(SolutionDir)vendors\pcre\bin\*.dll" "$(OutDir)"</Command>
+xcopy /y "$(SolutionDir)vendors\pcre\bin\*.dll" "$(OutDir)"
+
+xcopy /y "$(SolutionDir)vendors\openssl\bin\*.dll" "$(OutDir)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -93,18 +96,21 @@ xcopy /y "$(SolutionDir)vendors\pcre\bin\*.dll" "$(OutDir)"</Command>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>$(SolutionDir)\$(Configuration);$(SolutionDir)\vendors\libgcc\lib;$(SolutionDir)\vendors\zlib\lib;$(SolutionDir)\vendors\openssl\lib;$(SolutionDir)\vendors\libxml2\lib;$(SolutionDir)\vendors\iconv\lib;$(SolutionDir)\vendors\pcre\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>libimobiledevice.lib;libplist.lib;libusbmuxd.lib;libgcc.a;ws2_32.lib;zlib.lib;libcompat.lib;getopt.lib;libcnary.lib;iconv.lib;libxml2.lib;pcre.lib;socket.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libimobiledevice.lib;libplist.lib;libusbmuxd.lib;ws2_32.lib;zlib.lib;libcompat.lib;getopt.lib;libcnary.lib;iconv.lib;libxml2.lib;pcre.lib;socket.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalOptions>/SAFESEH:NO %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y "$(SolutionDir)vendors\libxml2\bin\*.dll" "$(OutDir)"
 
 
-xcopy /y "$(SolutionDir)vendors\iconv\bin\*.dll" "$(OutDir)"
+
+xcopy /y "$(SolutionDir)vendors\iconv\bin\*.dll" "$(OutDir)" 
 
 xcopy /y "$(SolutionDir)vendors\zlib\bin\*.dll" "$(OutDir)"
 
-xcopy /y "$(SolutionDir)vendors\pcre\bin\*.dll" "$(OutDir)"</Command>
+xcopy /y "$(SolutionDir)vendors\pcre\bin\*.dll" "$(OutDir)"
+
+xcopy /y "$(SolutionDir)vendors\openssl\bin\*.dll" "$(OutDir)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
